asignar empresas a alumnado

--- a/FCT_EntityFramework/FCT_EntityFramework.csproj
+++ b/FCT_EntityFramework/FCT_EntityFramework.csproj
@@ -147,16 +147,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="EmpresasForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="EmpresasForm.Designer.cs">
+      <DependentUpon>EmpresasForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ConsultasCicloForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConsultasCicloForm.Designer.cs">
+      <DependentUpon>ConsultasCicloForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Inicio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Inicio.Designer.cs">
+      <DependentUpon>Inicio.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="EmpresasForm.resx">
+      <DependentUpon>EmpresasForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ConsultasCicloForm.resx">
+      <DependentUpon>ConsultasCicloForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Inicio.resx">
+      <DependentUpon>Inicio.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
